# cpp_app_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
ci/: Jenkinsfile  Jenkinsfile.multiplatform  ci_run.lua  ci_run.sh  docker_build.sh  dockerfile.alpine  dockerfile.emscripten  dockerfile.emsdk  dockerfile.test  exeucte_all.ps1  vcpkg_commands_webassembly.txt  vcpkg_package_list.txt
cmake/: add_all_subdirectories.cmake  compiler_setup.cmake  configuration.cmake  default_targets.cmake  packaging.cmake  setup_clang_tidy.cmake  setup_compiler.cmake  setup_packages.cmake  setup_platform.cmake  sub_targets.cmake  targets_default.cmake  targets_sub.cmake
docs/: todo.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: arg_parse.cpp  arg_parse.hpp  main.cpp  runner.cpp  runner.hpp
src/app_core/: CMakeLists.txt
src/app_core/include/app_core/: app_args.hpp  sum.hpp
src/app_core/src/: sum.cpp
src/app_core/test/: app_benchmark.cpp  sum_test.cpp
src/app_executable/: CMakeLists.txt
src/app_executable/src/: arg_parse.hpp  main.cpp  runner.cpp
src/app_webassembly/: CMakeLists.txt
src/app_webassembly/src/: arg_parse.cpp  arg_parse.hpp  main.cpp  runner.cpp  runner.hpp
src/runner_benchmark/: CMakeLists.txt
src/runner_ut/: CMakeLists.txt
src/runner_ut/src/: main.cpp
